--- a/index.html
+++ b/index.html
@@ -1,93 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Agricultural Business Tracking</title>
-<link rel="stylesheet" href="styles.css">
+    <title>Image Recognition with TensorFlow.js</title>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow-models/mobilenet"></script>
 </head>
 <body>
+    <h2>Upload an Image to Identify</h2>
+    <input type="file" id="imageUpload">
+    <img id="image" width="300">
+    <p id="result"></p>
+    <script>
+        const imageUpload = document.getElementById('imageUpload');
+        const image = document.getElementById('image');
+        const result = document.getElementById('result');
 
-<h1>Agricultural Business Tracking</h1>
+        imageUpload.addEventListener('change', async (event) => {
+            const file = event.target.files[0];
+            const reader = new FileReader();
+            reader.onload = function () {
+                image.src = reader.result;
+            };
+            reader.readAsDataURL(file);
 
-<div id="addExpense">
-  <h2>Add Expenses</h2>
-  <form id="expenseForm">
-    <label for="category">Category:</label>
-    <select id="category">
-      <option value="seeds">Seeds</option>
-      <option value="fertilizers">Fertilizers</option>
-      <option value="labor">Labor</option>
-      <!-- Add more categories as needed -->
-    </select><br>
-    <label for="amount">Amount:</label>
-    <input type="number" id="amount" required><br>
-    <button type="submit">Submit</button>
-  </form>
-</div>
-
-<div id="displayExpenses">
-  <h2>Display Expenses</h2>
-  <table id="expenseTable">
-    <thead>
-      <tr>
-        <th>Category</th>
-        <th>Amount</th>
-        <th>Date</th>
-      </tr>
-    </thead>
-    <tbody id="expenseList">
-      <!-- Expenses will be dynamically added here -->
-    </tbody>
-  </table>
-</div>
-
-<div id="visualizeExpenses">
-  <h2>Visualize Expenses</h2>
-  <div id="chartContainer">
-    <!-- Placeholder for chart -->
-    <canvas id="expenseChart"></canvas>
-  </div>
-</div>
-
-<div id="budgeting">
-  <h2>Budgeting</h2>
-  <form id="budgetForm">
-    <label for="budgetCategory">Category:</label>
-    <select id="budgetCategory">
-      <option value="seeds">Seeds</option>
-      <option value="fertilizers">Fertilizers</option>
-      <option value="labor">Labor</option>
-      <!-- Add more categories as needed -->
-    </select><br>
-    <label for="budgetAmount">Budget Amount:</label>
-    <input type="number" id="budgetAmount" required><br>
-    <button type="submit">Set Budget</button>
-  </form>
-  <div id="budgetAlerts">
-    <!-- Budget alerts will be displayed here -->
-  </div>
-</div>
-
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.11.0/firebase-app.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  const firebaseConfig = {
-    apiKey: "AIzaSyA_S4T6yPXYUhhfPbdIXaeOcuHcVImEPwU",
-    authDomain: "agritracking-ceb9a.firebaseapp.com",
-    projectId: "agritracking-ceb9a",
-    storageBucket: "agritracking-ceb9a.appspot.com",
-    messagingSenderId: "130366030796",
-    appId: "1:130366030796:web:e43cdbbb1c071bef0b1369"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-</script>
-<script src="app.js"></script>
+            const model = await mobilenet.load();
+            model.classify(image).then(predictions => {
+                result.innerHTML = `Prediction: ${predictions[0].className}`;
+            });
+        });
+    </script>
 </body>
 </html>
